Adding Shard info
Signed-off-by: Kishore Kumaar Natarajan <kkumaarn@amazon.com>